[package]
name = "meowtonin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["no-rng"] }
backtrace = "0.3"
byondapi-sys = { path = "../sys" }
bytemuck = { version = "1", features = ["extern_crate_std"] }
cfg-if = "1"
inventory = "0.3"
libloading = { workspace = true }
log = "0.4"
meowtonin-impl = { path = "../impl" }
nohash-hasher = "0.2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console"] }

[features]
default = ["lossy-utf8"]
# Enables debug error logging in release builds
rel-debugging = []
# Uses lossy string conversion instead of strict UTF-8 converison.
lossy-utf8 = []
