[package]
name = "meowtonin"
description = "Fully featured Rust wrapper around byondapi."
documentation = "https://docs.rs/meowtonin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8"
aho-corasick = "1"
backtrace = "0.3"
bytemuck = { version = "1", features = ["extern_crate_std"] }
inventory = "0.3"
log = "0.4"
meowtonin-byondapi-sys = { path = "../sys", version = "0.2" }
meowtonin-impl = { path = "../impl", version = "0.2" }
nohash-hasher = "0.2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console"] }

[features]
default = ["lossy-utf8"]
# Enables debug panic logging in release builds
rel-debugging = []
# Uses lossy string conversion instead of strict UTF-8 converison.
lossy-utf8 = []

[package.metadata.docs.rs]
targets = ["i686-pc-windows-msvc", "i686-unknown-linux-gnu"]
