[package]
name = "meowtonin-impl"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/meowtonin-impl"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[package.metadata.docs.rs]
targets = ["i686-pc-windows-msvc", "i686-unknown-linux-gnu"]
