[package]
name = "meowtonin-serde"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/meowtonin-serde"

[dependencies]
meowtonin = { path = "../core", version = "0.1" }
serde = "1"
thiserror = "1"

[package.metadata.docs.rs]
targets = ["i686-pc-windows-msvc", "i686-unknown-linux-gnu"]
