[package]
name = "meowtonin-serde"
description = "Serializer/deserializer for BYOND types, using meowtonin."
documentation = "https://docs.rs/meowtonin-serde"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
meowtonin = { path = "../core", version = "0.2" }
serde = "1"
thiserror = "1"

[package.metadata.docs.rs]
targets = ["i686-pc-windows-msvc", "i686-unknown-linux-gnu"]
