[package]
name = "byondapi-sys"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1", optional = true }
cfg-if = "1"
libloading = { workspace = true }

[build-dependencies]
bindgen = "0.70"
doxygen-rs = "0.4"

[features]
default = ["bytemuck"]
