[package]
name = "meowtonin-byondapi-sys"
description = "byondapi bindings used by meowtonin"
documentation = "https://docs.rs/meowtonin-byondapi-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1", optional = true }
cfg-if = "1"
libloading = { workspace = true }

[build-dependencies]
bindgen = "0.71"
doxygen-rs = "0.4"

[features]
default = ["bytemuck"]

[package.metadata.docs.rs]
targets = ["i686-pc-windows-msvc", "i686-unknown-linux-gnu"]
