[package]
name = "meowtonin-byondapi-sys"
description = "byondapi bindings used by meowtonin"
documentation = "https://docs.rs/meowtonin-byondapi-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1", optional = true }
cfg-if = "1"
libloading = { workspace = true }

[build-dependencies]
bindgen = { version = "0.71", optional = true }
doxygen-rs = { version = "0.4", optional = true }

[features]
default = ["bytemuck"]
generate-bindings = ["bindgen", "doxygen-rs"]

[package.metadata.docs.rs]
targets = ["i686-pc-windows-msvc", "i686-unknown-linux-gnu"]
